<resources>
    <string name="app_name">Movied</string>
    <string name="minus">-</string>
    <string name="get_started">Get Started</string>
    <string name="title">Title</string>
    <string name="log_in_with_one_of_following_options">Log in with one of following options</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Log in</string>
    <string name="dont_have_an_account">Dont have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_with_one_of_following_options">Sign up with one of following options</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_guest">Hello, Guest</string>
    <string name="welcome_to">Welcome to</string>
    <string name="release_date">Release Date</string>
    <string name="december_9_2017">December 9, 2017</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="related_movie">Related Movie</string>
    <string name="find_your_movie">Find your movie</string>
    <string name="movie_not_found">Movie not found</string>
    <string name="favorite_empty">Favorite empty</string>
    <string name="username_not_valid">Username not valid</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="password_not_valid">Password not valid</string>
    <string name="password_not_same">Password not same</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="title_videoplayer">Video Player</string>
    <string name="title_favorite">Favorite</string>
</resources>