<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    tools:context=".ui.welcomescreen.WelcomeActivity">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico_regular"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_design_service"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_baseline_design_services"
        android:layout_height="wrap_content"
        app:tint="@color/red"
        android:contentDescription="@string/minus"
        app:layout_constraintTop_toTopOf="@+id/tv_app_name"
        app:layout_constraintStart_toEndOf="@+id/tv_app_name"
        app:layout_constraintBottom_toBottomOf="@+id/tv_app_name"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_started"
        android:layout_width="0dp"
        android:layout_marginStart="32dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        app:cornerRadius="11dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:backgroundTint="@color/green_500"
        android:layout_marginEnd="32dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/get_started"/>


</androidx.constraintlayout.widget.ConstraintLayout>