<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark"
    tools:context=".ui.register.RegisterActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/layout_action_bar"/>

    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        android:layout_width="match_parent"
        android:padding="24dp"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_signup"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/grey_9C"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/sign_up_with_one_of_following_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_facebook"
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_marginTop="24dp"
                app:cornerRadius="11dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/btn_gmail"
                app:icon="@drawable/ic_facebook"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="24dp"
                app:iconTint="@null"
                app:backgroundTint="@color/grey_9C_10"
                app:layout_constraintTop_toBottomOf="@+id/text_signup"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_gmail"
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_marginTop="24dp"
                app:cornerRadius="11dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/btn_facebook"
                app:icon="@drawable/ic_google_gmail"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="24dp"
                app:iconTint="@null"
                app:backgroundTint="@color/grey_9C_10"
                app:layout_constraintTop_toBottomOf="@+id/text_signup"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_label_username"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/btn_facebook"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="32dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_username"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="text"
                android:hint="@string/enter_your_username"
                android:textColorHint="@color/grey_9C"
                android:textSize="14sp"
                android:background="@drawable/rounded_edittext"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_username"
                app:layout_constraintStart_toStartOf="@+id/tv_label_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <TextView
                android:id="@+id/tv_label_email"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/edt_username"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_email"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_your_email"
                android:textColorHint="@color/grey_9C"
                android:textSize="14sp"
                android:background="@drawable/rounded_edittext"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_email"
                app:layout_constraintStart_toStartOf="@+id/tv_label_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>


            <TextView
                android:id="@+id/tv_label_password"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/edt_email"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_password"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:hint="@string/enter_your_password"
                android:textColorHint="@color/grey_9C"
                android:background="@drawable/rounded_edittext"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_password"
                app:layout_constraintStart_toStartOf="@+id/tv_label_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/toggle_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_show_hide_password"
                android:text=""
                android:buttonTint="@color/green_500"
                app:layout_constraintBottom_toBottomOf="@+id/edt_password"
                app:layout_constraintEnd_toEndOf="@+id/edt_password"
                app:layout_constraintTop_toTopOf="@+id/edt_password" />

            <TextView
                android:id="@+id/tv_label_confirm_password"
                android:text="@string/confirm_password"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/edt_password"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_confirm_password"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:hint="@string/enter_your_password"
                android:textColorHint="@color/grey_9C"
                android:background="@drawable/rounded_edittext"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_confirm_password"
                app:layout_constraintStart_toStartOf="@+id/tv_label_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/toggle_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_show_hide_password"
                android:text=""
                android:buttonTint="@color/green_500"
                app:layout_constraintBottom_toBottomOf="@+id/edt_confirm_password"
                app:layout_constraintEnd_toEndOf="@+id/edt_confirm_password"
                app:layout_constraintTop_toTopOf="@+id/edt_confirm_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_account"
                android:layout_width="0dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                app:cornerRadius="11dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/green_500"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/edt_confirm_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/create_account"/>


            <TextView
                android:id="@+id/tv_text_dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/already_have_an_account"
                android:textColor="@color/grey_9C"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/btn_create_account"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="@+id/btn_create_account"
                app:layout_constraintTop_toBottomOf="@+id/btn_create_account" />

            <TextView
                android:id="@+id/btn_login"
                app:layout_constraintTop_toTopOf="@+id/tv_text_dont_have_account"
                app:layout_constraintStart_toEndOf="@+id/tv_text_dont_have_account"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/tv_text_dont_have_account"
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>